# kicktipp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  messages.json  pyproject.toml  requirements.txt
kicktipp/: fetcher.py  game.py  main.py  notifier.py  participant.py  state_manager.py
