[tool.poetry]
name = "kicktipp"
version = "0.1.0"
description = ""
authors = ["ceddicedced <cedric@busacker.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
bs4 = "^0.0.2"
discord-webhook = "^1.3.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
